--- a/codifica-react/src/pages/TimelinePublic.css
+++ b/codifica-react/src/pages/TimelinePublic.css
@@ -11,16 +11,30 @@
 .container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 24px;
+  padding: 0 16px;
   position: relative;
   z-index: 10;
   flex: 1;
+  box-sizing: border-box;
+}
+
+@media (min-width: 768px) {
+  .container {
+    padding: 0 24px;
+  }
 }
 
 header {
-  padding: 64px 0;
-  margin-bottom: 64px;
+  padding: 32px 0;
+  margin-bottom: 32px;
   text-align: left;
+}
+
+@media (min-width: 768px) {
+  header {
+    padding: 64px 0;
+    margin-bottom: 64px;
+  }
 }
 
 .timeline-header-bottom {
